Auth at myAccount only, panels added

--- a/lawfirm/src/main/resources/META-INF/resources/index.html
+++ b/lawfirm/src/main/resources/META-INF/resources/index.html
@@ -22,7 +22,7 @@
         <div class="centring-content" id="menu">
             <div class="long-row" id="inner-menu">
                 <div class="long-row" id="options">
-                    <a href="#" class="link-btn" id="log-in-menu-link"><button class="btn full-btn" value="Zaloguj się">Zaloguj</button></a>
+                    <a href="/log" class="link-btn" id="log-in-menu-link"><button class="btn full-btn" value="Zaloguj się">Zaloguj</button></a>
                     <ul>
                         <li><a href="#" class="nav-element">Home</a></li>
                         <li><a href="#contact" class="nav-element">Kontakt</a></li>
@@ -39,7 +39,7 @@
         <div id="left-baner"></div>
         <div class="long-column" id="right-baner">
             <p id="overlay-text">Lorem ipsum dolor sit amet</p>
-            <a href="#" id="baner-link"><button class="btn full-btn" value="Zarezerwuj wizytę">Zarezerwuj wizytę</button></a>
+            <a href="/log" id="baner-link"><button class="btn full-btn" value="Zarezerwuj wizytę">Zarezerwuj wizytę</button></a>
         </div>
     </div>
     <div class="holder">
@@ -84,7 +84,7 @@
                     <p>Załóż bezpłatne konto na naszej stronie i umów wizytę z wybranym specjalistą.
                         Korzystaj z opieki radców prawnych kiedy chcesz i śledź przebieg swojego postępowania.
                     </p>
-                    <a href="#" id="register-link"><button class="btn full-btn" value="Zarejestruj się">Zarejestruj</button></a>
+                    <a href="/register" id="register-link"><button class="btn full-btn" value="Zarejestruj się">Zarejestruj</button></a>
                 </div>
             </div>
         </div>
