--- a/lawfirm/src/main/resources/META-INF/resources/login-page.html
+++ b/lawfirm/src/main/resources/META-INF/resources/login-page.html
@@ -33,7 +33,7 @@
         <div class="row-content" id="log-register-holder">
             <div class="row-content" id="log-register-left">
                 <div class="login-holder">
-                    <form class="column-content" id="login-form">
+                    <form action="/log" method="post" class="column-content" id="login-form">
                         <div class="input-holder">
                             <label for="email">Wpisz email:</label>
                             <input type="email" id="email" class="input-box">
@@ -54,7 +54,7 @@
                     <h1 class="large-message">Zaloguj się</h1>
                     <p class="medium-message">Zaloguj się na swoje konto w naszej aplikacji, przeglądaj swoje sprawy 
                         i rezerwuj wizyty od ręki.</p>
-                    <p class="small-message">Nie masz jeszcze konta? <a href="#">Zarejestruj się.</a> </p>
+                    <p class="small-message">Nie masz jeszcze konta? <a href="register">Zarejestruj się.</a> </p>
                 </div>
             </div>
         </div>
