Added client repo, service

--- a/lawfirm/src/main/resources/META-INF/resources/index.html
+++ b/lawfirm/src/main/resources/META-INF/resources/index.html
@@ -24,7 +24,7 @@
                 <div class="long-row" id="options">
                     <a href="/log" class="link-btn" id="log-in-menu-link"><button class="btn full-btn" value="Zaloguj się">Zaloguj</button></a>
                     <ul>
-                        <li><a href="#" class="nav-element">Home</a></li>
+                        <li><a href="/home" class="nav-element">Home</a></li>
                         <li><a href="#contact" class="nav-element">Kontakt</a></li>
                         <li><a href="#specializations" class="nav-element">Specjalizacje</a></li>
                     </ul>
