--- a/lawfirm/src/main/resources/META-INF/resources/login-page.html
+++ b/lawfirm/src/main/resources/META-INF/resources/login-page.html
@@ -54,7 +54,7 @@
                     <h1 class="large-message">Zaloguj się</h1>
                     <p class="medium-message">Zaloguj się na swoje konto w naszej aplikacji, przeglądaj swoje sprawy 
                         i rezerwuj wizyty od ręki.</p>
-                    <p class="small-message">Nie masz jeszcze konta? <a href="register">Zarejestruj się.</a> </p>
+                    <p class="small-message">Nie masz jeszcze konta? <a href="/register">Zarejestruj się.</a> </p>
                 </div>
             </div>
         </div>
