--- a/lawfirm/src/main/resources/META-INF/resources/registration_page.html
+++ b/lawfirm/src/main/resources/META-INF/resources/registration_page.html
@@ -20,7 +20,7 @@
         <div class="centring-content" id="menu">
             <div class="long-row" id="inner-menu">
                 <div class="long-row" id="options">
-                    <a href="#" class="link-btn" id="log-in-menu-link"><button class="btn full-btn" value="Log-in">Zaloguj</button></a>
+                    <a href="/log" class="link-btn" id="log-in-menu-link"><button class="btn full-btn" value="Log-in">Zaloguj</button></a>
                     <ul>
                         <li><a href="/home" class="nav-element">Home</a></li>
                         <li><a href="#" class="nav-element">Kontakt</a></li>
