Hotfix options layout

--- a/lawfirm/src/main/resources/META-INF/resources/index.html
+++ b/lawfirm/src/main/resources/META-INF/resources/index.html
@@ -97,64 +97,10 @@
         <div class="long-column" id="center-spec-holder">
             <a name="specializations"></a>
             <hr>
-            <h1 id="spec-header">NASZE SPECJALIZACJE</h1>
+            <h1 id="spec-header">NASZE USŁUGI</h1>
             <div id="specialization-wrapper">
-                <div class="specialization-stripe">
-                    <div class="specialization">
-                        <h2>Prawo podatkowe</h2>
-                        <ul class="spec-list">
-                            <li>Inspekcje</li>
-                            <li>Interpretacje prawa podatkowego</li>
-                            <li>Dokumentacja biznesowa</li>
-                            <li>Weryfikacja</li>
-                        </ul>
-                        <div class="read-more-holder">
-                            <button class="btn read-more">Czytaj więcej</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="specialization-stripe specialization-right">
-                    <div class="specialization specialization-right">
-                        <div class="read-more-holder">
-                            <button class="btn read-more">Czytaj więcej</button>
-                        </div>
-                        <ul class="spec-list">
-                            <li>Negocjacje w sprawie karnej</li>
-                            <li>Odwołanie od wyroku sądowego</li>
-                            <li>Doradztwo prawne</li>
-                            <li>Badanie dokumentacji sprawy</li>
-                        </ul>
-                        <h2>Prawo karne</h2>
-                        
-                    </div>
-                </div>
-                <div class="specialization-stripe">
-                    <div class="specialization">
-                        <h2>Prawo cywilne</h2>
-                        <ul class="spec-list">
-                            <li>Sprawy rodzinne</li>
-                            <li>Odszkodowania i zadośćuczynienia</li>
-                            <li>Spory dotyczące nieruchomości</li>
-                            <li>Umowy i zobowiązania</li>
-                        </ul>
-                        <div class="read-more-holder">
-                            <button class="btn read-more">Czytaj więcej</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="specialization-stripe specialization-right">
-                    <div class="specialization specialization-right">
-                        <div class="read-more-holder">
-                            <button class="btn read-more">Czytaj więcej</button>
-                        </div>
-                        <ul class="spec-list">
-                            <li>Doradztwo pracownicze</li>
-                            <li>Wypadki przy pracy</li>
-                            <li>Mediacje w sprawach pracowniczych</li>
-                            <li>Pozwy zbiorowe</li>
-                        </ul>
-                        <h2>Prawo pracy</h2>
-                    </div>
+
+
                 </div>
             </div>
             
