Style fix footer column socials sliding

--- a/lawfirm/src/main/resources/META-INF/resources/index.html
+++ b/lawfirm/src/main/resources/META-INF/resources/index.html
@@ -13,7 +13,7 @@
     
  
 </head>
-<body onload="revealSpecializations()">
+<body>
     <nav>
         <div class="centring-content" id="contact-info" >
             <div class="centring-orange">
@@ -95,7 +95,6 @@
     </div>
     <div id="big-holder">
         <div class="long-column" id="center-spec-holder">
-            <a name="specializations"></a>
             <hr>
             <h1 id="spec-header">NASZE USŁUGI</h1>
             <div id="specialization-wrapper">
